[workspace]

members = [
    "fpush",
    "fpush-ratelimit",
    "fpush-apns",
    "fpush-fcm",
    "fpush-traits",
    "fpush-tokenblocker",
    "fpush-demopush",
]

resolver = "2"

[patch.crates-io]
jid = { git = "https://gitlab.com/xmpp-rs/xmpp-rs.git" }
minidom = { git = "https://gitlab.com/xmpp-rs/xmpp-rs.git" }
tokio-xmpp = { git = "https://gitlab.com/xmpp-rs/xmpp-rs.git" }
xmpp-parsers = { git = "https://gitlab.com/xmpp-rs/xmpp-rs.git" }
xmpp = { git = "https://gitlab.com/xmpp-rs/xmpp-rs.git" }