[workspace]

members = [
    "fpush",
    "fpush-ratelimit",
    "fpush-apns",
    "fpush-fcm",
    "fpush-traits",
    "fpush-tokenblocker",
    "fpush-demopush",
]

resolver = "2"

[patch.crates-io]
jid = { git = "https://gitlab.com/xmpp-rs/xmpp-rs.git" }
minidom = { git = "https://gitlab.com/xmpp-rs/xmpp-rs.git" }
tokio-xmpp = { git = "https://gitlab.com/xmpp-rs/xmpp-rs.git" }
xmpp-parsers = { git = "https://gitlab.com/xmpp-rs/xmpp-rs.git" }
xmpp = { git = "https://gitlab.com/xmpp-rs/xmpp-rs.git" }

[workspace.dependencies]
log = { version = "^0.4" }
env_logger = { version = "^0.11" }

derive-getters = { version = "^0.5" }

serde_derive = { version = "^1.0" }
serde = { version = "^1.0", features = ["derive"] }
serde-humantime = { version = "^0.1" }
serde_json = { version = "1.0" }

tokio = { version = "^1.39" }
tokio-rustls = { version = "0.26.0", default-features = false, features = ["ring"] }
futures = { version = "^0.3" }
derive_more = { version = "^1.0", features = ["from", "display"] }

dashmap = { version = "^6.0" }

rand = { version = "^0.8", features = ["std_rng"] }

google-fcm1 = { version = "6.0" }
hyper-rustls = { version = "0.27", features = ["http2", "ring"] }
hyper = { version = "1.0", features = ["http2"] }
hyper-util = { version = "0.1", features = ["client-legacy"] }

a2 = { version = "0.10" }

async-trait = { version = "^0.1" }

xmpp = { git = "https://gitlab.com/xmpp-rs/xmpp-rs.git", default-features = false }
tokio-xmpp = { git = "https://gitlab.com/xmpp-rs/xmpp-rs.git", default-features = false }
xmpp-parsers = { git = "https://gitlab.com/xmpp-rs/xmpp-rs.git" }

fpush-ratelimit = { path = "./fpush-ratelimit" }
fpush-tokenblocker = { path = "./fpush-tokenblocker" }
fpush-traits = { path = "./fpush-traits" }
fpush-apns = { path = "./fpush-apns" }
fpush-fcm = { path = "./fpush-fcm" }
fpush-demopush = { path = "./fpush-demopush" }
fpush-push = { path = "./fpush-push" }

[workspace.features]

release_max_level_warn = ["log/release_max_level_warn"]
release_max_level_info = ["log/release_max_level_info"]

monal_prod = ["fpush-push/random_delay_before_push", "release_max_level_info", "fpush-push/enable_apns_support"]
monal_debug = ["fpush-push/random_delay_before_push", "fpush-push/enable_apns_support", "fpush-push/enable_fcm_support"]
default = ["monal_debug"]
