[package]
name = "fpush-apns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log.workspace = true
async-trait.workspace = true

serde_derive.workspace = true
serde.workspace = true
serde_json.workspace = true

a2.workspace = true

fpush-traits.workspace = true
