[package]
name = "fpush-demopush"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "^0.4"
async-trait = "^0.1"
rand = "^0.8"
tokio = { version = "^1.0", features = ["time"] }
fpush-traits = { path = "../fpush-traits" }

[features]
release_max_level_warn = ["log/release_max_level_warn"]
release_max_level_info = ["log/release_max_level_info"]