[package]
name = "fpush-demopush"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log.workspace = true
async-trait.workspace = true
rand.workspace = true
tokio = { workspace = true, features = ["time"] }
fpush-traits.workspace = true
