[package]
name = "fpush-fcm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "^0.4"
async-trait = "^0.1"

serde_derive = "^1.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0.85"

google-fcm1 = "4.0.1"
hyper-rustls = "0.23.0"
hyper = { version = "0.14.20", features = ["client", "http2"] }

fpush-traits = { path = "../fpush-traits" }
tokio = { version = "1", features = ["full"] }


[features]
release_max_level_warn = ["log/release_max_level_warn"]
release_max_level_info = ["log/release_max_level_info"]
