[package]
name = "fpush-fcm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log.workspace = true
async-trait.workspace = true

serde_derive.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

google-fcm1.workspace = true
hyper-rustls = { workspace = true, features = ["http2"] }
hyper = { workspace = true, features = ["client", "http2"] }

fpush-traits.workspace = true
tokio = { workspace = true, features = ["full"] }

