[package]
name = "fpush-push"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log.workspace = true

derive-getters.workspace = true
derive_more.workspace = true

serde_derive.workspace = true
serde.workspace = true
serde-humantime.workspace = true

tokio = { workspace = true, features = ["time"] }
futures.workspace = true

dashmap.workspace = true

rand = { workspace = true, features = ["std_rng"], optional = true }

async-trait.workspace = true

fpush-ratelimit.workspace = true
fpush-tokenblocker.workspace = true

fpush-traits.workspace = true
fpush-apns = { workspace = true, optional = true }
fpush-fcm = { workspace = true, optional = true }
fpush-demopush = { workspace = true, optional = true }

[features]
random_delay_before_push = ["rand"]

enable_fcm_support = ["fpush-fcm"]
enable_apns_support = ["fpush-apns"]
enable_demo_support = ["fpush-demopush"]

default = ["enable_fcm_support", "enable_apns_support", "enable_demo_support"]