[package]
name = "fpush-ratelimit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "^0.4"

serde_derive = "^1.0"
serde = { version = "^1.0", features = ["derive"] }
serde-humantime = "^0.1"

dashmap = "^5.2"

tokio = { version = "^1", features = ["time"] }

[dev-dependencies]

[features]
release_max_level_warn = ["log/release_max_level_warn"]
release_max_level_info = ["log/release_max_level_info"]

disable_ratelimit = []