cargo-features = ["named-profiles"]

[package]
name = "fpush"
version = "0.1.0"
edition = "2021"


[profile.relase]
lto = true

[profile.relase.overrides."*"]
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "^0.4"
env_logger = "^0.10"
serde_json = "^1.0"

derive-getters = "^0.2"

serde_derive = "^1.0"
serde = { version = "^1.0", features = ["derive"] }
serde-humantime = "^0.1"

tokio = { version = "^1.0", features = ["time"] }
futures = "^0.3"
derive_more = "^0.99"

xmpp = { git = "https://gitlab.com/xmpp-rs/xmpp-rs.git", default-features = false }
tokio-xmpp = { git = "https://gitlab.com/xmpp-rs/xmpp-rs.git", default-features = false }
xmpp-parsers = { git = "https://gitlab.com/xmpp-rs/xmpp-rs.git", features = ["component"] }

fpush-push = { path = "../fpush-push" }

async-trait = "^0.1"

[features]
release_max_level_warn = ["log/release_max_level_warn"]
release_max_level_info = ["log/release_max_level_info"]
