[package]
name = "fpush"
version = "0.1.0"
edition = "2021"

[profile.relase]
lto = true

[profile.relase.overrides."*"]
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log.workspace = true
env_logger.workspace = true
serde_json.workspace = true

derive-getters.workspace = true

serde_derive.workspace = true
serde.workspace = true
serde-humantime.workspace = true

tokio = { workspace = true, features = ["time"] }
tokio-rustls = { workspace = true, default-features = false, features = ["ring"] }
futures.workspace = true
derive_more.workspace = true

xmpp = { workspace = true, default-features = false }
tokio-xmpp = { workspace = true, default-features = false, features = ["insecure-tcp", "dns"] }
xmpp-parsers = { workspace = true, features = ["component"] }

fpush-push.workspace = true

async-trait.workspace = true
